--- a/buildspec.yml
+++ b/buildspec.yml
@@ -42,7 +42,7 @@ phases:
       #https://docs.aws.amazon.com/codebuild/latest/userguide/build-spec-ref.html
 
       # Package SAM template
-      - sam package --template-file template.yaml --s3-bucket sam-artifacts-sou --output-template-file packaged.yaml
+      - sam package --template-file template.yml --s3-bucket sam-artifacts-sou --output-template-file packaged.yaml
       # Deploy packaged SAM template
       - sam deploy --template-file packaged.yaml --stack-name python-hello-world-sam-application --capabilities CAPABILITY_IAM
       # - command
